19991015-02:04 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/compiler/genjava.c
     + Java source generation added to the compiler (by Matteo Baccan)
   * source/rtl/filesys.c
     + TOFIX: added to hb_fsIsDrv() (by Jose Lalin)
   * source/rtl/dates.c
     ! Some pp directives indented.

Thu Oct 14 17:29:32 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* source/rtl/dates.c: 
	Fixed an include guard so that HB_DONT_DEFINE_BASIC_TYPES is
	defined for both gcc and mingw32.

19991014-18:17 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/compiler/genc.c
     ! Fixed pcode generation with /gc0 switch for MODULENAME opcode.
       There was an incrementation operator embedded in an expression, which
       was not executed in this case.

19991014-18:13 GMT+1 Bruno Cantero <bruno@issnet.net>

  * source/rdd/dbcmd.c
    * Removed some low level access to item.asArray

19991014-16:18 GMT+3 Alexander Kresin
  * source/pp/hbpp.c
  * source/pp/hbppint.c
  * source/pp/stdalone/hbpp.c
    * Fixed some bugs, reported by Antonio Linares, Victor Szel and Jose Lalin

19991013-20:10 GMT+8 Ron Pinkas <Ron@Profit-Master.com>
   * harbour.y
	  + added rules to allow inline assignment to RIVATE/PUBLIC &cVar (as in PRIVATE &cVar := 'Hello').
	  + added extern char *yytext to have acces to the original string form of numbers.
   * harbour.l
          + added rules to support new TOKEN MACROOP and completed support for macro in MODES PRIVATE and PUBLIC_ (Ryszard TODO removed).
   * tests/tstmacro.prg
	  added more tests to demonstrate working capabilities of macro.

19991013-01:40 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/rtl/dates.c
     ! #ifdef ...WIN_GTAPI changed to proper platform tests.

19991013-19:05 EDT David G. Holm <dholm@jsd-llc.com>

   * include/itemapi.h
     + Added a prototype for hb_itemString().
     + Added a prototype for hb_itemValToStr().

   * source/compiler/harbour.l
     ! Removed yy_strdup() call from yy_ConvertNumber().
