@@ -1,3 +1,7 @@
+19991015-09:53 GMT+3 Alexander Kresin
+  * source/pp/hbpp.c
+    * Fixed little bug, reported by Antonio Linares
+
 19991015-02:04 GMT+1 Victor Szel <info@szelvesz.hu>
    * source/compiler/genjava.c
      + Java source generation added to the compiler (by Matteo Baccan)
